new comments added

--- a/Report/Sections/1_Power.tex
+++ b/Report/Sections/1_Power.tex
@@ -37,6 +37,18 @@ In terms of pure power consumption, we see a visible peak that reaches a value o
 \label{fig:E_total}
 \end{figure}
 
+\begin{center}
+\setstretch{0.9}
+count    21102.000000 \\
+mean       799.785924 \\
+std        100.830046 \\
+min         31.016491 \\
+25\%        760.074139 \\
+50\%        809.663640 \\
+75\%        858.164028 \\
+max       1311.606144
+\end{center}
+
 The energy computation was conducted based on power consumption data to derive energy values in kWh. \\
 Distinct regions in the plot exhibit consistent energy levels around the mean, notably in June and August, alongside regions with negative peaks (e.g., July and October) and others with positive peaks. Understanding these peaks in the context of high-power computing offers valuable insights; \\
 for example, cooling needs vary with external conditions like temperature. Peaks may coincide with hotter periods, necessitating more energy for cooling. \\
