--- a/Report/Sections/3_OperationalCarbonFootprint.tex
+++ b/Report/Sections/3_OperationalCarbonFootprint.tex
@@ -1,6 +1,6 @@
 \section{Operational Carbon Footprint Analysis}
 Operation Carbon Footprint is the most important metric for the goal of our observation, since it is the result of combining energy usage (related to power consumption) and carbon intensity. \\
-For this reason we will see a combination of the observations we did related both to power and CI.
+For this reason we will see a combination of the observations we did related both to power and CI, and our final suggestions will be a cross-reference of the previous data.
 
 \vspace{-15pt}
 
@@ -36,7 +36,10 @@ max      408868.699240
 \end{figure}
 
 \subsection{Cop analysis using Meta's Prophet}
-
+As before, Prophet allows us to better visualize the seasonality of our distribution: \\
+in general the carbon footprint follows very much the carbon intensity distribution, showing the higher impact it has on the final pollution factor;
+looking at the week level plot, we clearly see a big lowering in equivalent CO2 production during sunday, while the same happens every day close to noon (same observations we did on the CI). 
+At season and month level we confirm that the footprint lowers during summer.
 
 \vspace{-10pt}
 
