Finished adding images and comments, tools paragraph still missing, need to add comments on Cop paragraph

--- a/Report/Sections/3_OperationalCarbonFootprint.tex
+++ b/Report/Sections/3_OperationalCarbonFootprint.tex
@@ -31,6 +31,7 @@ max      408868.699240
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{../../PLOTS/Cop_stl.png}
+\captionsetup{skip=-10pt}
 \caption{Cop r206n01 STL}
 \label{fig:Cop_r206n01_stl}
 \end{figure}
@@ -46,6 +47,7 @@ At season and month level we confirm that the footprint lowers during summer.
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{../../PLOTS/Cop_prophet.png}
+\captionsetup{skip=-10pt}
 \caption{Cop trends}
 \label{fig:Cop_prophet}
 \end{figure}
