--- a/Report/Sections/1_Power.tex
+++ b/Report/Sections/1_Power.tex
@@ -25,6 +25,7 @@ min      3.101649e+04 \\
 max      1.311606e+06
 \end{center}
 
+\noindent
 In terms of pure power consumption, we see a visible peak that reaches a value of 1.3 MW, while the general mean stays close to 0.8 MW. The data fluctuates a lot throughout the days, but it is difficult to find any particular pattern or repetition at this level of depth; what we can guess is that all o most of the lowest points in the plot are given by a moment or period of maintenance for the server, while the highest values might indicate an episode of testing for the capabilities of the server in terms of maximum computational power.
 
 \vspace{-15pt}
@@ -49,6 +50,7 @@ min         31.016491 \\
 max       1311.606144
 \end{center}
 
+\noindent
 The energy computation was conducted based on power consumption data to derive energy values in kWh. \\
 Distinct regions in the plot exhibit consistent energy levels around the mean, notably in June and August, alongside regions with negative peaks (e.g., July and October) and others with positive peaks. Understanding these peaks in the context of high-power computing offers valuable insights; \\
 for example, cooling needs vary with external conditions like temperature. Peaks may coincide with hotter periods, necessitating more energy for cooling. \\
@@ -108,6 +110,7 @@ Even making a seasonal-trend decomposition it’s hard to highlight any specific
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{../../PLOTS/PWR_stl_r206n01.png}
+\captionsetup{skip=-10pt}
 \caption{PWR r206n01 STL}
 \label{fig:PWR_stl_r206n01}
 \end{figure}
@@ -121,10 +124,12 @@ good choices, purely looking at the following data, might be to increase the nod
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{../../PLOTS/PWR_prophet.png}
+\captionsetup{skip=-10pt}
 \caption{PWR trends}
 \label{fig:PWR_prophet}
 \end{figure}
 
+\noindent
 Analyzing these trends aids in optimizing energy management strategies and mitigating environmental impact in high-power computing environments.
 For example implementing energy optimization algorithms could reduce consumption during certain periods, resulting in negative peaks;
 while aiming to a better server energy efficiency can lead to improvements in server and cooling efficiency and alter the graph's shape over time, potentially reducing energy consumption peaks.
