tools paragraph finished, still need to comment Cop STL

--- a/Report/Sections/1_Power.tex
+++ b/Report/Sections/1_Power.tex
@@ -110,7 +110,7 @@ Even making a seasonal-trend decomposition it’s hard to highlight any specific
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{../../PLOTS/PWR_stl_r206n01.png}
-\captionsetup{skip=-10pt}
+%\captionsetup{skip=-10pt}
 \caption{PWR r206n01 STL}
 \label{fig:PWR_stl_r206n01}
 \end{figure}
@@ -124,7 +124,7 @@ good choices, purely looking at the following data, might be to increase the nod
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{../../PLOTS/PWR_prophet.png}
-\captionsetup{skip=-10pt}
+%\captionsetup{skip=-10pt}
 \caption{PWR trends}
 \label{fig:PWR_prophet}
 \end{figure}
