--- a/Report/Sections/2_CarbonIntensity.tex
+++ b/Report/Sections/2_CarbonIntensity.tex
@@ -56,7 +56,7 @@ Taking advantage of this decomposition we can easily guess the following assumpt
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{../../PLOTS/CI_stl.png}
-\captionsetup{skip=-10pt}
+%\captionsetup{skip=-10pt}
 \caption{CI STL}
 \label{CI_stl}
 \end{figure}
@@ -70,7 +70,7 @@ During week days the carbon intensity is higher with respect to weekends, as wel
 \begin{figure}[H]
 \centering
 \includegraphics[width=1\textwidth]{../../PLOTS/CI_prophet.png}
-\captionsetup{skip=-10pt}
+%\captionsetup{skip=-10pt}
 \caption{CI trends}
 \label{CI_prophet}
 \end{figure}
