plots for the individual nodes created

--- a/PWR_Dataset_plotting.ipynb
+++ b/PWR_Dataset_plotting.ipynb
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,6 +729,27 @@
     "        continue # Skipping a cycle if the rack number isn't present\n",
     "    export_plot(dataset_P[rack].sum(axis=1), (20,10), rack_id, f'../PLOTS/PWR_{rack_id}.png')\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture \n",
+    "# To avoid printing the output\n",
+    "\n",
+    "# CELL THAT CREATES IMAGES FOR ALL NODES in the same position in each rack, RUN ONLY IF NEEDED\n",
+    "for i in range(1, 21):\n",
+    "    if (i < 10):\n",
+    "        node_nbr = \"n0\" + str(i)\n",
+    "    else:\n",
+    "        node_nbr = \"n\" + str(i)\n",
+    "    node = [col for col in dataset_P.columns if node_nbr in col]\n",
+    "    if not node:\n",
+    "        continue # Skipping a cycle if the node number isn't present\n",
+    "    export_plot(dataset_P[node].sum(axis=1), (20,10), node_nbr, f'../PLOTS/PWR_{node_nbr}.png')"
    ]
   }
  ],
