--- a/PWR_Dataset_plotting.ipynb
+++ b/PWR_Dataset_plotting.ipynb
@@ -828,7 +828,7 @@
     }
    ],
    "source": [
-    "# Creation of indiividual nodes' dataset and plotting as a boxplot\n",
+    "# Creation of indiividual nodes' dataset and plotting as a lineplot\n",
     "dataset_P_nodes = pd.DataFrame()\n",
     "dataset_P_mean_nodes = pd.Series()\n",
     "\n",
@@ -859,6 +859,13 @@
     "\n",
     "plt.savefig('../PLOTS/PWR_nodes_mean_plot.png', dpi=300)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I WANT TO ADD THE TEMPERATURE'S DATASET IN ORDER TO COMPARE ITS VALUES WITH THE MEAN POWER ONES, SUPERIMPOSING A HISTOGRAM COLORED BY TEMPERATURE."
    ]
   }
  ],
