--- a/Report/Sections/1_Power.tex
+++ b/Report/Sections/1_Power.tex
@@ -110,7 +110,7 @@ Comparing the plots of the first rack (r205) with respect to the others it seems
 \subsubsection{Comparison r205 and other racks}
 The first rack in a data center often exhibits consistent power consumption due to several factors:
 \begin{itemize}
-    \item \textbf{Login nodes}:it is possible that the first rack contains login nodes. Due to this it exhibits a more regular patter in power consumption since login nodes are primarly used for user access, job submission and management tasks which tend to have a more predictable load than the highly variable computational tasks running on compute nodes. In addition the workloads on login nodes are generally less intensive and more uniform over time, leading to more consistent power usage patterns and the hardware in login nodes is often optimized for efficiency and stability, which can contribute to a more predictable power consumption profile;
+    \item \textbf{Login nodes}: it is possible that the first rack contains login nodes. Due to this it exhibits a more regular pattern in power consumption since login nodes are primarly used for user access, job submission and management tasks which tend to have a more predictable load than the highly variable computational tasks running on compute nodes. In addition the workloads on login nodes are generally less intensive and more uniform over time, leading to more consistent power usage patterns and the hardware in login nodes is often optimized for efficiency and stability, which can contribute to a more predictable power consumption profile;
     \item \textbf{Critical Infrastructure Equipment}: the first rack often contains critical equipment for infrastructure management, such as main routers or switches, which require a constant and reliable power supply. In addition data centers are designed with power distribution systems that ensure the first racks receive stable power and are not affected by load variations that may occur further down the distribution chain;
     \item \textbf{Thermal Management}: The first racks are strategically positioned to benefit from optimal airflow, maintaining a constant temperature and reducing the risk of overheating. Consistent thermal conditions contribute to greater power regularity, as fluctuations in temperature can impact the energy efficiency of equipment;
     \item \textbf{Facility Design}: The placement of racks and airflow management within the data center play a role in maintaining power consistency. Proper facility design ensures efficient airflow, contributing to stable power consumption;
