Prophet predictions and results

--- a/Report/Sections/3_OperationalCarbonFootprint.tex
+++ b/Report/Sections/3_OperationalCarbonFootprint.tex
@@ -37,7 +37,7 @@ max      408868.699240
 \end{figure}
 
 \subsection{Cop analysis using Meta's Prophet}
-As before, Prophet allows us to better visualize the seasonality of our distribution: \\
+As before, Prophet allows to better visualize the seasonality of our distribution: \\
 in general the carbon footprint follows very much the carbon intensity distribution, showing the higher impact it has on the final pollution factor;
 looking at the week level plot, we clearly see a big lowering in equivalent CO2 production during sunday, while the same happens every day close to noon (same observations we did on the CI). 
 At season and month level we confirm that the footprint lowers during summer.
