--- a/Report/Sections/Tools.tex
+++ b/Report/Sections/Tools.tex
@@ -1,7 +1,6 @@
 \section{Tools and methods used for the analysis}
 \noindent
-To start, we'd like to quickly introduce the tools and methods we implemented to analyze our data.
-
+To start, a brief introduction to the tools and methods employed for data analysis is provided.
 \vspace{-15pt}
 
 \subsection{STL (Seasonal-Trend Decomposition)}
