commented after the meeting

--- a/PWR_Dataset_plotting.ipynb
+++ b/PWR_Dataset_plotting.ipynb
@@ -984,6 +984,17 @@
     "plt.savefig('../PLOTS/PWR_TEMPin_nodes_mean_plot.png', dpi=300)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- plot temperatures in and out in the same plot to highlight the different ranges they have, and also plot a boxplot for the temp datasets like I did with the power.\n",
+    "- try to do in-depth observations for the power: we want to provide a good suggestion for a possible reduce in energy consumption and money usage, so try to quantify this possible decrease in both values in the case we prefer to use the lower nodes instead of the upper ones (TRY TO FIND FANS SPEED AS A METRIC).\n",
+    "- Insert all observations in the report.\n",
+    "\n",
+    "(Distribution of fans is really important since the system is air cooled, not water cooled)"
+   ]
   }
  ],
  "metadata": {
