--- a/Report/main.tex
+++ b/Report/main.tex
@@ -24,16 +24,16 @@
 \input{./Sections/0_Abstract}
 \pagebreak
 
-\input{./Sections/Tools}
+\input{./Sections/1_Intro}
 \pagebreak
 
-\input{./Sections/1_Power}
+\input{./Sections/2_Power}
 \pagebreak
 
-\input{./Sections/2_CarbonIntensity}
+\input{./Sections/3_CarbonIntensity}
 \pagebreak
 
-\input{./Sections/3_OperationalCarbonFootprint}
+\input{./Sections/4_OperationalCarbonFootprint}
 \pagebreak
 
 }
