Report Update Sections Changed

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -27,14 +27,18 @@
 \input{./Sections/1_Intro}
 \pagebreak
 
-\input{./Sections/2_Power}
+\input{./Sections/2_Tools}
 \pagebreak
 
-\input{./Sections/3_CarbonIntensity}
+\input{./Sections/3_PowerEnergy}
 \pagebreak
 
-\input{./Sections/4_OperationalCarbonFootprint}
+\input{./Sections/4_CI-COP}
 \pagebreak
+
+\input{./Sections/5_Conclusion}
+\pagebreak
+
 
 }
 
