--- a/Report/Sections/0_Abstract.tex
+++ b/Report/Sections/0_Abstract.tex
@@ -1,13 +1,14 @@
 \begin{abstract}
-\noindent
-In the following document we try to collect all possible observations and intuitions related to our work, whose goal is to profile High Power Computing power consumptions and track CO2 emissions related to it. \\
-
-\begin{center}
-Contributors: \\
-Devletiyarov Baibek \\
-Liberatoscioli Martina \\
-Squarzoni Lorenzo \\
-Zavaroni Sofia 
-\end{center}
-
-\end{abstract}
+    \noindent
+    The following report includes the observations related to our work, the goal of which is profiling the HPC (High Performance Computing) power consumption and CO2 emissions in the scope of Laboratory of Big Data course. \\
+    
+    \begin{center}
+    Contributors: \\
+    Devletiyarov Baibek \\
+    Liberatoscioli Martina \\
+    Squarzoni Lorenzo \\
+    Zavaroni Sofia 
+    \end{center}
+    
+    \end{abstract}
+    
