--- a/Report/Sections/2_Tools.tex
+++ b/Report/Sections/2_Tools.tex
@@ -9,6 +9,9 @@
 To start, a brief introduction to the tools and methods employed for data analysis is provided.
 \vspace{-15pt}
 
+\subsection{Dataset Preparation}
+\vspace{-15pt}
+
 \subsection{STL (Seasonal-Trend Decomposition)}
 STL (Seasonal-Trend Decomposition) is a technique used in time series analysis to break down a dataset into three main components: trend, seasonality, and remainder. \\
 1. \textbf{Trend}: This component captures the long-term direction or progression of the data, indicating whether it is increasing, decreasing, or staying constant over time. \\
@@ -18,7 +21,7 @@ By decomposing the time series data into these components, STL allows to underst
 
 \vspace{-15pt}
 
-\subsection{Meta's Prophet}
+\subsection{Prophet by Meta}
 Prophet is a forecasting tool developed by Facebook, designed to handle time series data with seasonal patterns and uncertainty. Its key points are: \\
 1. \textbf{Automatic Seasonality Detection}: Prophet automatically detects seasonal patterns in the data, making it suitable for datasets with irregular or changing seasonalities. \\
 2. \textbf{Trend Flexibility}: Users can specify various components of the time series, including holidays and special events, which are incorporated into the forecasting model. \\
