--- a/Report/Sections/4_CI-COP.tex
+++ b/Report/Sections/4_CI-COP.tex
@@ -6,3 +6,7 @@
 4.2. COP - ?
 4.2. trying to predict the cabon intensity?
 4.2. discussion - what was observed?}
+
+\subsection{3.1}
+
+\subsection{Discussion}
