--- a/Report/Sections/3_PowerEnergy.tex
+++ b/Report/Sections/3_PowerEnergy.tex
@@ -4,3 +4,8 @@
 \textcolor{red}{3. Power/Energy+Temperature
 3.1. the outputs of preparing, approximating and plotting of the power dataset
 3.2. discussion - what trends have been noticed (or not?) if yes, what is the outcome and also temperature considerations}
+
+
+\subsection{3.1}
+
+\subsection{Discussion}
