--- a/Report/Sections/3_PowerEnergy.tex
+++ b/Report/Sections/3_PowerEnergy.tex
@@ -1,11 +1,16 @@
 \section{Power and Energy Consumption}
 \noindent
 
-\textcolor{red}{3. Power/Energy+Temperature
-3.1. the outputs of preparing, approximating and plotting of the power dataset
-3.2. discussion - what trends have been noticed (or not?) if yes, what is the outcome and also temperature considerations}
+\subsection{Data Visualization}
+\textcolor{red}{graph}
 
+STL - seasonality?
+Meta - seasonality?
 
-\subsection{3.1}
 
 \subsection{Discussion}
+The available data spans in the range of April 2020 to October 2022 (Fig\#). In terms of the power consumption, the peak can be defined as 1.3 MW and the mean approximately 0.8 MW. Based on the power consumption data, the energy consumption plot was also build. Moreover, the excess peaks and drops in the power and energy plots can be described as a testing of maximum computational power and maintenance, respectively.  \\
+The fluctuations of data does not demonstrate the pattern of seasonality visually, which is further confirmed with the STL analysis tool \textcolor{red}{fig}, which also did not demonstrate the seasonality pattern of energy consumption. 
+
+However, the separate regions of the graph exhibit constant trends during small periods of time, for example July-October period. This potentially can be related to the external conditions as outside temperature depending on the season of the year. Particularly, the cooling may vary depending on these external conditions, which can lead to either increased or decreased energy consumption, for example, the hotter periods require more energy for cooling. Moreover, the general increases of energy consumption can be related to the performing the computations, which leads to higher activity of the node and increased power usage, depending on the heaviness of the task. 
+
