--- a/Report/Sections/3_PowerEnergy.tex
+++ b/Report/Sections/3_PowerEnergy.tex
@@ -7,6 +7,7 @@
 STL - seasonality?
 Meta - seasonality?
 
+\subsection{COP - Operational Carbon Footprint Calculation}
 
 \subsection{Discussion}
 The available data spans in the range of April 2020 to October 2022 (Fig\#). In terms of the power consumption, the peak can be defined as 1.3 MW and the mean approximately 0.8 MW. Based on the power consumption data, the energy consumption plot was also build. Moreover, the excess peaks and drops in the power and energy plots can be described as a testing of maximum computational power and maintenance, respectively.  \\
