--- a/Report/Sections/4_CI-COP.tex
+++ b/Report/Sections/4_CI-COP.tex
@@ -1,12 +1,15 @@
-\section{Carbon Intensity \& Operational Carbon Footprint}
+\section{Carbon Intensity}
 \noindent
+
+The distribution of avaialble data is in the range of 3 years from January 2021 to January 2024. Analysis of the data demonstrates the seasonality, which makes the data generally predictable. The available data includes the carbon intensity of LCA and Direct. \textcolor{red}{elaborate LCA/Direct}
 
 \textcolor{red}{4. Carbon Intensity 
 4.1. the outputs of raw data + plots?
-4.2. COP - ?
 4.2. trying to predict the cabon intensity?
 4.2. discussion - what was observed?}
 
 \subsection{3.1}
 
 \subsection{Discussion}
+
+The STL decomposition as well as Prophet demonstrate the seasonality in the dataset: the decrease in Carbon Intensity occurs in the warmer monthts as well as the higher values of Carbon Intensity correspond to colder months, which is in line with the active usage of heating equipment.  
