--- a/Report/Layout/headerfooter.tex
+++ b/Report/Layout/headerfooter.tex
@@ -3,8 +3,8 @@
 \setlength{\headheight}{33.31677pt}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
-\lhead{\large Data Analysis and Green Computing \\ Report}
-\rhead{\large April 2024 \\ Green Team}
+\lhead{\fontsize{8}{10}Data Analysis and Green Computing \\ Report}
+\rhead{\fontsize{8}{10}April 2024 \\ Green Team}
 \rfoot{\textbf{Page \thepage}}
 \lfoot{}
 
