--- a/Report/Sections/2_Tools.tex
+++ b/Report/Sections/2_Tools.tex
@@ -22,7 +22,10 @@ By decomposing the time series data into these components, STL allows to underst
 \vspace{-15pt}
 
 \subsection{Prophet by Meta}
-Prophet is a forecasting tool developed by Facebook, designed to handle time series data with seasonal patterns and uncertainty. Its key points are: \\
+
+
+
+Prophet\cite{example} is a forecasting tool developed by Facebook, designed to handle time series data with seasonal patterns and uncertainty. Its key points are: \\
 1. \textbf{Automatic Seasonality Detection}: Prophet automatically detects seasonal patterns in the data, making it suitable for datasets with irregular or changing seasonalities. \\
 2. \textbf{Trend Flexibility}: Users can specify various components of the time series, including holidays and special events, which are incorporated into the forecasting model. \\
 3. \textbf{Uncertainty Estimation}: Prophet provides uncertainty intervals around the forecasted values, helping users understand the range of possible outcomes. \\
