--- a/Report/main.tex
+++ b/Report/main.tex
@@ -11,7 +11,7 @@
 \geometry{letterpaper, portrait, includeheadfoot=true, hmargin=0.5in, vmargin=0.5in}
 
 %\fontsize{font size}{vertsize (usually 1.2x)}\selectfont
-
+\addbibresource{references.bib}
 \begin{document}
 \renewcommand{\familydefault}{\rmdefault}
 
@@ -39,6 +39,7 @@
 \input{./Sections/5_Conclusion}
 \pagebreak
 
+\printbibliography
 
 }
 
