--- a/Report/Sections/0_Abstract.tex
+++ b/Report/Sections/0_Abstract.tex
@@ -4,7 +4,7 @@
     
     \begin{center}
     Contributors: \\
-    Devletiyarov Baibek \\
+    Davletiyarov Baibek \\
     Liberatoscioli Martina \\
     Squarzoni Lorenzo \\
     Zavaroni Sofia 
