New file and a couple of comments

--- a/PWR_Dataset_plotting.ipynb
+++ b/PWR_Dataset_plotting.ipynb
@@ -1034,6 +1034,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "REQUIRED METRICS:\n",
+    "\n",
+    "fanX_Y: Speed of the Fan Y in module X. X=0..3, Y=0,1 (revolutions, RPM, int)\n",
+    "\n",
+    "fan_disk_power: Power consumption of the disk fan (Watts, W, int)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
