Corrected the computation of money and CO2 saving

--- a/Energy_Saving_computation.ipynb
+++ b/Energy_Saving_computation.ipynb
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,13 +605,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For ease of computation we'll try to make our computations just using the average values we got so far, multipling our results by 20, considering each node of a certain number is present in one of the 20 racks.\n",
+    "For ease of computation we'll try to make our computations just using the average values we got so far, multipling our results by 49, considering each node of a certain number is present in one of the 49 racks.\n",
     "The most energy-consuming and warm nodes are the higher ones, for this reason we'll consider the last four [n17, n18, n19, n20], substituting their average energy consumption with the average value taken from the whole server, which is equal to 0.8161080858605112."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -640,7 +640,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -707,20 +707,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yearly energy saving (computed from the average values) in kWh: 7889.083502725379\n"
+      "Yearly energy saving (computed from the average values) in kWh: 19328.254581677178\n"
      ]
     }
    ],
    "source": [
     "avg_diff = dataset_E_mean_nodes.sum(axis=0) - dataset_E_mean_nodes_new.sum(axis=0)\n",
-    "avg_diff_rack = avg_diff * 20\n",
+    "avg_diff_rack = avg_diff * 49\n",
     "avg_diff_day = avg_diff_rack * 24\n",
     "avg_diff_year = avg_diff_day * 365\n",
     "\n",
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
        "[21102 rows x 20 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
        "Length: 21102, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1187,20 +1187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yearly energy saving (computed with individual samples) in kWh: 7601.618268242732\n"
+      "Yearly energy saving (computed with individual samples) in kWh: 18623.96475719469\n"
      ]
     }
    ],
    "source": [
     "tot_diff_rack = E_diff.sum(axis=0) \n",
-    "tot_diff_node = tot_diff_rack * 20\n",
+    "tot_diff_node = tot_diff_rack * 49\n",
     "tot_diff_node_year = tot_diff_node / 2.5\n",
     "\n",
     "print(f'Yearly energy saving (computed with individual samples) in kWh: {tot_diff_node_year}')"
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
        "[21102 rows x 1 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1333,14 +1333,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In the simplified case we end up with a possible saving of 1286.28 EUR per year, equivalent to 7.89 MWh not used\n"
+      "In the simplified case we end up with a possible saving of 3151.39 EUR per year, equivalent to 19.33 MWh not used\n"
      ]
     }
    ],
@@ -1353,21 +1353,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "In the more accurate case we end up with a possible saving of 1605.26 EUR per year, equivalent to 7.60 MWh not used\n",
-      "In the last two and a half years, applying this kind of task management, we could have saved 4013.16 EUR, equal to 19.00 MWh\n"
+      "In the more accurate case we end up with a possible saving of 3932.90 EUR per year, equivalent to 18.62 MWh not used\n",
+      "In the last two and a half years, applying this kind of task management, we could have saved 9832.24 EUR, equal to 46.56 MWh\n"
      ]
     }
    ],
    "source": [
     "# CASE 2:\n",
-    "E_diff_MWh = E_diff * 20 / 1000\n",
+    "E_diff_MWh = E_diff * 49 / 1000\n",
     "E_diff_EUR = E_diff_MWh * dataset_E_cost['Price (EUR/MWhe)']\n",
     "E_saved_2 = E_diff_EUR.sum(axis=0) # For 2.5 years\n",
     "E_saved_2_1y = E_diff_EUR.sum(axis=0) / 2.5 # For 1 year\n",
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1484,7 @@
        "[15263 rows x 1 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1503,24 +1503,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Again, this approach might have avoided the production of 10477.33 Kg of equivalent CO2 for the past 21 months\n"
+      "Again, this approach might have avoided the production of 25669.45 kg of equivalent CO2 for the past 21 months\n"
      ]
     }
    ],
    "source": [
     "# Computation of Cop from our previously obtained energy distribution\n",
-    "CO2_saved = E_diff.copy() * 20\n",
+    "CO2_saved = E_diff.copy() * 49\n",
     "CO2_saved = CO2_saved[(CO2_saved.index >= '2021-01-01 00:00:00')]\n",
     "CO2_saved = CO2_saved * dataset_CI['LCA+direct']\n",
     "\n",
-    "print(f'Again, this approach might have avoided the production of {(CO2_saved.sum(axis=0)/1000):.2f} Kg of equivalent CO2 for the past 21 months')"
+    "print(f'Again, this approach might have avoided the production of {(CO2_saved.sum(axis=0)/1000):.2f} kg of equivalent CO2 for the past 21 months')"
    ]
   }
  ],
